public interface Observer {
    void update(double balance);
}
